# HumanSystemOptimization

graph/: index.html
hso/: pyproject.toml
hso/src/humansystemoptimization/: __init__.py  knowledge.py  mcp_server.py
hso/tests/: test_knowledge.py  test_mcp_server.py
skill/: SKILL.md
skill/references/: graph-data.js  index.json  references.json  schema.json
skill/references/modules/: 01_sleep.md  02_diet.md  03_mindset_dopamine.md  04_learning_focus.md  05_brain_health.md  06_longevity.md  07_personal_practice.md
